Arreglar navegacion entre paginas. Inicio de sesion y gestión de cuentas. Mantener cuenta conforme navegas por la página. Menú desplegable desde le perfil. Opción de cambio de idioma en todas las paginas

--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/buscar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="script/nav.js"></script>
+    <script src="script/versionb.js"></script>
 </head>
 <body>
     <nav>
@@ -30,6 +32,24 @@
                 </select>
             </li>
         </ul>
+        <div class="nav-actions">
+            <button class="btn-icon" aria-label="Buscar">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+
+        <!-- Perfil en Navbar -->
+        <div class="perfil-wrapper">
+        <span id="nombreUsuario" class="nombre-usuario"></span>
+        <img id="fotoPerfil" class="foto-perfil" src="img/default.png">
+
+            <div class="user-menu" id="userMenu">
+                <button class="btn btn-primary">Mi perfil</button>
+                <button class="btn btn-primary">Mis Amigos</button>
+                <button class="btn btn-primary">Mis Rutas</button>
+                <button class="btn btn-secondary btn-block" onclick="cerrarSesion()">Cerrar sesión</button>
+            </div>
+        </div>
     </nav>
 
     <main class="search-main">
@@ -605,5 +625,6 @@
     </footer>
 
     <script src="script/buscar.js"></script>
+    <script src="script/nav.js"></script>
 </body>
 </html>
