--- a/politica.html
+++ b/politica.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="script/nav.js"></script>
+    <script src="script/versionb.js"></script>
+
 </head>
 
  
@@ -23,6 +26,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li>
+                <select name="idioma" id="idioma">
+                    <option value="es">🇪🇸 Español</option>
+                    <option value="en">🇬🇧 English</option>
+                    <option value="fr">🇫🇷 Français</option>
+                </select>
+            </li>
         </ul>
         <div class="nav-actions">
             <button class="btn-icon" aria-label="Buscar">
@@ -137,7 +147,7 @@
                     <p>
                         Al utilizar nuestros servicios y registrarte en <strong>Mochileros Sin Fronteras</strong>, confirmas que has leído, comprendido y aceptado esta política de privacidad.
                     </p>
-                    <a href="registro.html" class="btn btn-primary">
+                    <a href="index.html" class="btn btn-primary">
                         <i class="fas fa-check-circle"></i>
                         Acepto y Continuar
                     </a>
@@ -224,5 +234,5 @@
         </div>
     </footer>
 </body>
- 
+
 </html>
