--- a/registro.html
+++ b/registro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/registro.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="script/nav.js"></script>
 </head>
 
 <body>
@@ -23,6 +24,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="foro.html">Comunidad</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li>
+                <select name="idioma" id="idioma">
+                    <option value="es">🇪🇸 Español</option>
+                    <option value="en">🇬🇧 English</option>
+                    <option value="fr">🇫🇷 Français</option>
+                </select>
+            </li>
         </ul>
         <div class="nav-actions">
             <button class="btn-ghost" id="searchToggle">
@@ -208,6 +216,7 @@
     </footer>
 
     <script src="./script/registro.js"></script>
+    <script src="script/nav.js"></script>
 </body>
 </html>
 
