--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/blog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="script/nav.js"></script>
+    <script src="script/versionb.js"></script>
+
 </head>
 <body>
     <nav>
@@ -18,18 +21,35 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href="packs.html">Packs</a></li>
+            <li><a href= index.html#featured-packs>Packs</a></li>
             <li><a href="blog.html" class="active">Blog</a></li>
             <li><a href="foro.html">Comunidad</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li>
+                <select name="idioma" id="idioma">
+                    <option value="es">🇪🇸 Español</option>
+                    <option value="en">🇬🇧 English</option>
+                    <option value="fr">🇫🇷 Français</option>
+                </select>
+            </li>
         </ul>
         <div class="nav-actions">
-            <button class="btn-ghost" id="searchToggle">
+            <button class="btn-icon" aria-label="Buscar">
                 <i class="fas fa-search"></i>
             </button>
-            <button class="btn btn-primary btn-sm">
-                <i class="fas fa-user"></i> Mi Cuenta
-            </button>
+        </div>
+
+        <!-- Perfil en Navbar -->
+        <div class="perfil-wrapper">
+        <span id="nombreUsuario" class="nombre-usuario"></span>
+        <img id="fotoPerfil" class="foto-perfil" src="img/default.png">
+
+            <div class="user-menu" id="userMenu">
+                <button class="btn btn-primary">Mi perfil</button>
+                <button class="btn btn-primary">Mis Amigos</button>
+                <button class="btn btn-primary">Mis Rutas</button>
+                <button class="btn btn-secondary btn-block" onclick="cerrarSesion()">Cerrar sesión</button>
+            </div>
         </div>
     </nav>
 
