--- a/comprar.html
+++ b/comprar.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/comprar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script type="text/javascript" src="script/comprar.js"></script>
+    <script src="script/nav.js"></script>
 </head>
 
 <body>
@@ -25,6 +26,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li>
+                <select name="idioma" id="idioma">
+                    <option value="es">🇪🇸 Español</option>
+                    <option value="en">🇬🇧 English</option>
+                    <option value="fr">🇫🇷 Français</option>
+                </select>
+            </li>
         </ul>
         <div class="nav-actions">
             <button class="btn-icon" aria-label="Buscar">
@@ -218,5 +226,6 @@
     </footer>
 
   </main>
+        <script src="script/nav.js"></script>
 </body>
 </html>
