Footers iguales para todas las páginas

--- a/politica.html
+++ b/politica.html
@@ -217,6 +217,12 @@
                     <li><a href="#">Términos y Condiciones</a></li>
                     <li><a href="#">Aviso Legal</a></li>
                     <li><a href="#contacto">Contacto</a></li>
+                    <li>
+                        <select name="idioma" id="idioma">
+                            <option value="es">🇪🇸 Español</option>
+                            <option value="en">🇬🇧 English</option>
+                        </select>
+                    </li>
                 </ul>
             </div>
             
