--- a/comprar.html
+++ b/comprar.html
@@ -6,6 +6,7 @@
     <title>Finalizar Compra - Mochileros Sin Fronteras</title>
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="./style/comprar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script type="text/javascript" src="script/comprar.js"></script>
@@ -13,7 +14,6 @@
 </head>
 
 <body>
-
     <nav class="navbar">
         <div class="nav-brand">
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
@@ -30,7 +30,6 @@
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
                     <option value="en">🇬🇧 English</option>
-                    <option value="fr">🇫🇷 Français</option>
                 </select>
             </li>
         </ul>
@@ -42,7 +41,7 @@
         </div>
     </nav>
 
-  <main class="comprar-main">
+<main class="comprar-main">
     
     <!-- Hero del Producto -->
     <section class="product-hero">
