--- a/politica.html
+++ b/politica.html
@@ -6,14 +6,15 @@
     <title>Política de Privacidad - Mochileros Sin Fronteras</title>
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script/nav.js"></script>
     <script src="script/versionb.js"></script>
 
 </head>
 
- 
- <body>
+
+<body>
     <nav class="navbar">
         <div class="nav-brand">
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
@@ -30,7 +31,6 @@
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
                     <option value="en">🇬🇧 English</option>
-                    <option value="fr">🇫🇷 Français</option>
                 </select>
             </li>
         </ul>
@@ -41,6 +41,7 @@
             <a href="registro.html" class="btn btn-primary">Mi Cuenta</a>
         </div>
     </nav>
+
     <main class="politica-main">
         <section class="politica-hero">
             <div class="hero-content">
