--- a/versionb.html
+++ b/versionb.html
@@ -8,6 +8,7 @@
     <!-- Estilos principales del sitio -->
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="./style/user-sidebar.css">
     <link rel="stylesheet" href="./style/comprar.css">
 
@@ -28,11 +29,10 @@
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span>Mochileros Sin Fronteras</span>
         </div>
-
         <ul class="nav-menu">
-            <li><a class="active" href="versionb.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href= #featured-packs>Packs</a></li>
+            <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
             <li><a href="#contacto">Contacto</a></li>
@@ -40,11 +40,9 @@
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
                     <option value="en">🇬🇧 English</option>
-                    <option value="fr">🇫🇷 Français</option>
                 </select>
             </li>
         </ul>
-
         <div class="nav-actions">
             <button class="btn-icon" aria-label="Buscar">
                 <i class="fas fa-search"></i>
