--- a/blog.html
+++ b/blog.html
@@ -7,29 +7,29 @@
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/blog.css">
+    <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script/nav.js"></script>
     <script src="script/versionb.js"></script>
 
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <img src="images/Logo.png" height="50" width="50" alt="Logo de Mochileros Sin Fronteras">
+    <nav class="navbar">
+        <div class="nav-brand">
+            <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span>Mochileros Sin Fronteras</span>
         </div>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href= index.html#featured-packs>Packs</a></li>
-            <li><a href="blog.html" class="active">Blog</a></li>
-            <li><a href="foro.html">Comunidad</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="versionb.html">Packs</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="#foro">Comunidad</a></li>
+            <li><a href="#contacto">Contacto</a></li>
             <li>
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
                     <option value="en">🇬🇧 English</option>
-                    <option value="fr">🇫🇷 Français</option>
                 </select>
             </li>
         </ul>
@@ -37,7 +37,6 @@
             <button class="btn-icon" aria-label="Buscar">
                 <i class="fas fa-search"></i>
             </button>
-        </div>
 
         <!-- Perfil en Navbar -->
         <div class="perfil-wrapper">
