--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Mochileros sin Fronteras</title>
     <link rel="stylesheet" href="./style/components.css">
+    <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -18,12 +19,18 @@
             <span>Mochileros Sin Fronteras</span>
         </div>
         <ul class="nav-menu">
-            <li><a href="index.html" class="active">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href= #featured-packs>Packs</a></li> 
+            <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li>
+                <select name="idioma" id="idioma">
+                    <option value="es">🇪🇸 Español</option>
+                    <option value="en">🇬🇧 English</option>
+                </select>
+            </li>
         </ul>
         <div class="nav-actions">
             <button class="btn-icon" aria-label="Buscar">
