--- a/registro.html
+++ b/registro.html
@@ -7,38 +7,36 @@
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/registro.css">
+    <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script/nav.js"></script>
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <img src="images/Logo.png" height="50" width="50" alt="Logo de Mochileros Sin Fronteras">
+    <nav class="navbar">
+        <div class="nav-brand">
+            <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span>Mochileros Sin Fronteras</span>
         </div>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href="packs.html">Packs</a></li>
+            <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="foro.html">Comunidad</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="#foro">Comunidad</a></li>
+            <li><a href="#contacto">Contacto</a></li>
             <li>
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
                     <option value="en">🇬🇧 English</option>
-                    <option value="fr">🇫🇷 Français</option>
                 </select>
             </li>
         </ul>
         <div class="nav-actions">
-            <button class="btn-ghost" id="searchToggle">
+            <button class="btn-icon" aria-label="Buscar">
                 <i class="fas fa-search"></i>
             </button>
-            <a href="registro.html" class="btn btn-primary btn-sm active">
-                <i class="fas fa-user"></i> Mi Cuenta
-            </a>
+            <a href="registro.html" class="btn btn-primary">Mi Cuenta</a>
         </div>
     </nav>
     <main class="registro-main">
