--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="./style/blog.css">
     <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="script/nav.js"></script>
+        <!-- Removed duplicate nav.js include -->
     <script src="script/versionb.js"></script>
+    <script src="script/nav.js"></script>
     <script src="script/i18n.js" defer></script>
 </head>
 <body>
@@ -19,6 +20,9 @@
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span data-i18n="brand">Mochileros Sin Fronteras</span>
         </div>
+        <button class="nav-toggle" aria-label="Abrir menú" aria-expanded="false">
+            <span></span><span></span><span></span>
+        </button>
         <ul class="nav-menu">
             <li><a href="index.html" data-i18n="nav_home">Inicio</a></li>
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
@@ -37,6 +41,7 @@
             <button class="btn-icon" aria-label="Buscar">
                 <i class="fas fa-search"></i>
             </button>
+        </div>
 
         <!-- Perfil en Navbar -->
         <div class="perfil-wrapper">
