--- a/comprar.html
+++ b/comprar.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style/comprar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script type="text/javascript" src="script/comprar.js"></script>
-    <script src="script/nav.js"></script>
+    <!-- Duplicate nav.js include removed -->
 </head>
 
 <body>
@@ -19,6 +19,9 @@
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span>Mochileros Sin Fronteras</span>
         </div>
+        <button class="nav-toggle" aria-label="Abrir menú" aria-expanded="false">
+            <span></span><span></span><span></span>
+        </button>
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
