--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span>Mochileros Sin Fronteras</span>
         </div>
+        <button class="nav-toggle" aria-label="Abrir menú" aria-expanded="false">
+            <span></span><span></span><span></span>
+        </button>
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
