--- a/politica.html
+++ b/politica.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/detalle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="script/nav.js"></script>
     <script src="script/versionb.js"></script>
 
 </head>
@@ -20,6 +19,9 @@
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
             <span>Mochileros Sin Fronteras</span>
         </div>
+        <button class="nav-toggle" aria-label="Abrir menú" aria-expanded="false">
+            <span></span><span></span><span></span>
+        </button>
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
@@ -240,6 +242,7 @@
             <p>&copy; 2025 Mochileros Sin Fronteras. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="script/nav.js"></script>
 </body>
 
 </html>
