--- a/versionb.html
+++ b/versionb.html
@@ -35,7 +35,7 @@
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href="versionb.html">Packs</a></li>
+            <li><a href=featured-packs>Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
             <li><a href="#contacto">Contacto</a></li>
