Seccion Amigos (Beta) Quiero probar a intentar que se pueda mensajear entre usuarios que yo haya creado y que solo añada usuarios que existan (probar a implementar solicitudes de amistad)

--- a/versionb.html
+++ b/versionb.html
@@ -59,7 +59,7 @@
 
             <div class="user-menu" id="userMenu">
                 <button class="btn btn-primary">Mi perfil</button>
-                <button class="btn btn-primary">Mis Amigos</button>
+                <button id="btnMisAmigos" class="btn btn-primary">Mis Amigos</button>
                 <button class="btn btn-primary">Mis Rutas</button>
                 <button class="btn btn-secondary btn-block" onclick="cerrarSesion()">Cerrar sesión</button>
             </div>
@@ -226,6 +226,53 @@
                 </div>
             </div>
 
+            <!-- Popup Amigos / Chat (demo) with tabs: Friends | Add friend | Online -->
+            <div id="popupFriends" class="popup friends-popup" aria-hidden="true">
+                <div class="popup-content friends-popup-content">
+                    <div class="friends-left">
+                        <div class="friends-header">
+                            <div class="friends-tabs" role="tablist" aria-label="Amigos Tabs">
+                                <button type="button" class="friends-tab-btn active" data-tab="friends" role="tab" aria-selected="true">Amigos</button>
+                                <button type="button" class="friends-tab-btn" data-tab="add" role="tab" aria-selected="false">Añadir</button>
+                                <button type="button" class="friends-tab-btn" data-tab="online" role="tab" aria-selected="false">Online</button>
+                            </div>
+                        </div>
+
+                        <div id="friendsPanels" class="friends-panels">
+                            <div id="panel-friends" class="panel panel-active" role="tabpanel">
+                                <ul id="friendsList" class="friends-list">
+                                    <!-- populated by script -->
+                                </ul>
+                            </div>
+
+                            <div id="panel-add" class="panel" role="tabpanel" aria-hidden="true">
+                                <form id="addFriendForm" class="add-friend-panel">
+                                    <label for="newFriendName">Nombre del amigo</label>
+                                    <input id="newFriendName" name="name" class="form-input" placeholder="Ej. Laura" required>
+                                    <button type="submit" class="btn btn-primary btn-block">Añadir amigo</button>
+                                </form>
+                            </div>
+
+                            <div id="panel-online" class="panel" role="tabpanel" aria-hidden="true">
+                                <ul id="onlineList" class="friends-list online-list">
+                                    <!-- populated by script -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chat-panel">
+                        <div id="chatHeader" class="chat-header">Selecciona un amigo para chatear</div>
+                        <div id="messages" class="messages" aria-live="polite"></div>
+                        <div class="chat-input-row">
+                            <input id="chatInput" class="chat-input" placeholder="Escribe un mensaje...">
+                            <button id="chatSend" class="btn btn-primary">Enviar</button>
+                        </div>
+                    </div>
+                    <button id="closeFriends" class="btn btn-ghost" aria-label="Cerrar">×</button>
+
+                </div>
+            </div>
+
             <div class="sidebar-widget">
                 <h3><i class="fas fa-search"></i> Buscar experiencias</h3>
 
@@ -316,6 +363,7 @@
     </footer>
 
     <script src="script/nav.js"></script>
+    <script src="script/friends.js"></script>
 
 </body>
 </html>
