redireccion a iniciar sesion corregido

--- a/registro.html
+++ b/registro.html
@@ -133,7 +133,7 @@
                         <p id="mensaje" class="form-message"></p>
 
                         <div class="form-footer">
-                            <p>¿Ya tienes cuenta? <a href="index.html">Inicia sesión</a></p>
+                            <p>¿Ya tienes cuenta? <a href="index.html#SidebarLogin">Inicia sesión</a></p>
                         </div>
                     </form>
                 </div>
