--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <!-- Sidebar -->
         <aside class="home-sidebar">
             <!-- Login Widget -->
-            <div class="sidebar-widget login-widget">
+            <div id= "SidebarLogin" class="sidebar-widget login-widget">
                 <h3><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</h3>
                 <form class="login-form">
                     <div class="form-group">
