--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -26,7 +26,7 @@
             <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li>
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
@@ -623,7 +623,7 @@
                     <li><a href="politica.html">Política de Privacidad</a></li>
                     <li><a href="#">Términos y Condiciones</a></li>
                     <li><a href="#">Aviso Legal</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                     <li>
                         <select name="idioma" id="idioma">
                             <option value="es">🇪🇸 Español</option>
