--- a/politica.html
+++ b/politica.html
@@ -28,7 +28,7 @@
             <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li>
                 <select name="idioma" id="idioma">
                     <option value="es">🇪🇸 Español</option>
@@ -219,7 +219,7 @@
                     <li><a href="politica.html">Política de Privacidad</a></li>
                     <li><a href="#">Términos y Condiciones</a></li>
                     <li><a href="#">Aviso Legal</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                     <li>
                         <select name="idioma" id="idioma">
                             <option value="es">🇪🇸 Español</option>
