--- a/versionb.html
+++ b/versionb.html
@@ -35,7 +35,7 @@
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href=featured-packs>Packs</a></li>
+            <li><a href=#featured-packs>Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#foro">Comunidad</a></li>
             <li><a href="contacto.html">Contacto</a></li>
@@ -69,7 +69,7 @@
 
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Sección de titular -->
     <section class="hero-home">
         <div class="hero-overlay"></div>
         <div class="hero-content-wrapper">
@@ -226,7 +226,7 @@
                 </div>
             </div>
 
-            <!-- Popup Amigos / Chat (demo) with tabs: Friends | Add friend | Online -->
+            <!-- Popup Amigos -->
             <div id="popupFriends" class="popup friends-popup" aria-hidden="true">
                 <div class="popup-content friends-popup-content">
                     <div class="friends-left">
@@ -241,7 +241,7 @@
                         <div id="friendsPanels" class="friends-panels">
                             <div id="panel-friends" class="panel panel-active" role="tabpanel">
                                 <ul id="friendsList" class="friends-list">
-                                    <!-- populated by script -->
+                                    <!-- Se rellena mediante el script (cada vez que añades un amigo) -->
                                 </ul>
                             </div>
 
@@ -256,7 +256,7 @@
 
                             <div id="panel-online" class="panel" role="tabpanel" aria-hidden="true">
                                 <ul id="onlineList" class="friends-list online-list">
-                                    <!-- populated by script -->
+                                    <!-- Se rellenan mediante el script (cuando se conecta algun amigo) -->
                                 </ul>
                             </div>
                         </div>
